--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8082
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/critter_db
+spring.jpa.hibernate.ddl-auto=create
