--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8082
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/critter_db
+spring.datasource.url=jdbc:mysyql://localhost:3306/critter
+spring.datasource.username=sa
+spring.datasource.password=sa1234
+spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
