--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8082
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
 spring.datasource.url=jdbc:mysyql://localhost:3306/critter
 spring.datasource.username=sa
 spring.datasource.password=sa1234
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
