--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8082
 
-spring.datasource.url=jdbc:mysyql://localhost:3306/critter
+spring.datasource.url=jdbc:mysql://localhost:3306/critter
 spring.datasource.username=sa
 spring.datasource.password=sa1234
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
